# farmplan

./: .gitignore  README.md  pyproject.toml
farmplan/: main.py
