[tool.poetry]
name = "farmplan"
version = "0.1.0"
description = ""
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dearpygui = "^1.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
rope = "^0.23.0"
pylint = "^3.0.0"
pydocstyle = "^6.0.0"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
